# model-informed-greenhouse-dashboard

./: .env.example  .gitignore  AGENTS.md  Phytoritas.md  README.md  pyproject.toml  start_all.bat
.github/workflows/: ci.yml
.rah/: setup-scope.json
.rah/logs/: activity_log.md
.rah/memory/: case_map.json  decision_register.md  memento_context.json  memento_feedback.json  memento_recall.json  memento_reflect_draft.json  wakeup.md
.rah/plans/: current_loop.md
.rah/runtime/: AGENTS.overlay.md  issue-coral-stay-redesign.md
.rah/state/: bootstrap_summary.json  doctor.json  gates.json  memento_status.json  status.json
configs/: backend.env.example  greenhouse.yaml  rtr_good_windows.yaml  rtr_profiles.json
docs/architecture/: 00_workspace_audit.md  01_system_brief.md  Phytoritas.md  gap_register.md
docs/design/: codex_image_based_greenhouse_ui_prompt.md
docs/ux/: phyto-korean-glossary.md
frontend/: env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.routing.test.tsx  App.tsx  config.ts  (+4 more)
scripts/: GitHubProject.Common.ps1  Link-GitHubProjectRepository.ps1  calibrate_rtr.py  start_all.bat  start_all.sh
tests/: conftest.py  test_advisor_orchestration.py  test_advisory.py  test_crop_physiology_services.py  test_knowledge_database.py  test_knowledge_query.py  test_model_runtime_api.py  test_model_runtime_scenario_sensitivity.py  test_openai_ai.py  test_produce_prices.py  test_rtr_optimizer.py  test_rtr_profiles.py  test_smoke.py  test_streaming.py  test_weather.py  test_workbook_normalization.py
(+305 files in other folders)
